[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Example Author", email="23ii.mancy@gmail.com" },
]
description = "An easy way to crate inline Telegram bots and you can get json file from the user answers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = ""
Issues = "https://github.com/pypa/sampleproject/issues"